--- a/DutchTreat/bower.json
+++ b/DutchTreat/bower.json
@@ -2,7 +2,7 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
-    "jQuery": "3.2.1",
+    "jQuery": "^3.2.1",
     "bootstrap": "^3.3.7"
   }
 }
