--- a/DutchTreat/AnaSProject.csproj
+++ b/DutchTreat/AnaSProject.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>AnaSProject</AssemblyName>
+    <RootNamespace>AnaSProject</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,10 +12,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Shared\" />
   </ItemGroup>
 
 </Project>
