--- a/AnaSProject/package.json
+++ b/AnaSProject/package.json
@@ -24,7 +24,9 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14",
-    "lodash":  "^4.17.4"
+    "lodash": "^4.17.4",
+    "angular-persistence": "1.0.1",
+    "angular2-ui-switch": "1.2.0"
   },
   "devDependencies": {
     "@angular/cli": "1.5.4",
